--- a/SimpleDevToolbox/Shared/SimpleDevToolbox.Shared.csproj
+++ b/SimpleDevToolbox/Shared/SimpleDevToolbox.Shared.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 </Project>
