--- a/BasicTools.Client/Properties/launchSettings.json
+++ b/BasicTools.Client/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SimpleDevToolbox": {
+    "BasicTools": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
