--- a/BasicTools.Client/wwwroot/manifest.json
+++ b/BasicTools.Client/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "SimpleDevToolbox",
-  "short_name": "SimpleDevToolbox",
+  "name": "BasicTools",
+  "short_name": "BasicTools",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
