--- a/BasicTools.Server/Properties/launchSettings.json
+++ b/BasicTools.Server/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
     },
-    "SimpleDevToolbox.Server": {
+    "BasicTools.Server": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
