fix aws deployment

--- a/BasicTools.Server/Dockerfile
+++ b/BasicTools.Server/Dockerfile
@@ -7,12 +7,12 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["BasicTools/Server.BasicTools.Server.csproj", "BasicTools/Server/"]
-COPY ["BasicTools/Shared.BasicTools.Shared.csproj", "BasicTools/Shared/"]
-COPY ["BasicTools/Client.BasicTools.Client.csproj", "BasicTools/Client/"]
-RUN dotnet restore "BasicTools/Server/BasicTools.Server.csproj"
+COPY ["BasicTools.Server/BasicTools.Server.csproj", "BasicTools.Server/"]
+COPY ["BasicTools.Shared/BasicTools.Shared.csproj", "BasicTools.Shared/"]
+COPY ["BasicTools.Client/BasicTools.Client.csproj", "BasicTools.Client/"]
+RUN dotnet restore "BasicTools.Server/BasicTools.Server.csproj"
 COPY . .
-WORKDIR "/src/BasicTools/Server"
+WORKDIR "/src/BasicTools.Server"
 RUN dotnet build "BasicTools.Server.csproj" -c Release -o /app/build
 
 FROM build AS publish
