make projects deterministic

--- a/BasicTools.Server/BasicTools.Server.csproj
+++ b/BasicTools.Server/BasicTools.Server.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>7fba5203-89b9-4427-b772-aa8ce1602767</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
