--- a/BasicTools.Shared/BasicTools.Shared.csproj
+++ b/BasicTools.Shared/BasicTools.Shared.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
