fix deploy and cleanup

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,7 +69,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: AwsEcsTaskDef.json
-        container-name: primary
+        container-name: BasicToolsSite
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
