--- a/BasicTools.Shared/BasicTools.Shared.csproj
+++ b/BasicTools.Shared/BasicTools.Shared.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BasicTools.Bootstrap\BasicTools.Bootstrap.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 </Project>
