--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -39,7 +39,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
+      with:
+        fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+    
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
