--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -82,3 +82,6 @@ jobs:
         service: BasicToolsSite-service
         cluster: default
         wait-for-service-stability: true
+
+    - name: Invalidate Cloudfront Distribution
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION }} --paths '/*'
