--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+BasicTools.Client/Prerender/output
+
 # User-specific files
 *.rsuser
 *.suo
