--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,6 +1,5 @@
 on:
-  pull_request:
-    types: [opened, edited, reopened]
+  pull_request
 
 name: Pull Requests
 
@@ -17,7 +16,8 @@ jobs:
     - name: Setup dotnet 6
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '6.0'
+        dotnet-version: '6.0.x'
+        include-prerelease: true
 
     - name: Install dependencies
       run: dotnet restore
