--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,12 @@
 on:
-  pull_request
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
 
-name: Pull Requests
+name: Continuous Integration 
 
 jobs:
   deploy:
