--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,34 +1,9 @@
-# This workflow will build and push a new container image to Amazon ECR,
-# and then will deploy a new task definition to Amazon ECS, when a release is created
-#
-# To use this workflow, you will need to complete the following set-up steps:
-#
-# 1. Create an ECR repository to store your images.
-#    For example: `aws ecr create-repository --repository-name my-ecr-repo --region us-east-2`.
-#    Replace the value of `ECR_REPOSITORY` in the workflow below with your repository's name.
-#    Replace the value of `aws-region` in the workflow below with your repository's region.
-#
-# 2. Create an ECS task definition, an ECS cluster, and an ECS service.
-#    For example, follow the Getting Started guide on the ECS console:
-#      https://us-east-2.console.aws.amazon.com/ecs/home?region=us-east-2#/firstRun
-#    Replace the values for `service` and `cluster` in the workflow below with your service and cluster names.
-#
-# 3. Store your ECS task definition as a JSON file in your repository.
-#    The format should follow the output of `aws ecs register-task-definition --generate-cli-skeleton`.
-#    Replace the value of `task-definition` in the workflow below with your JSON file's name.
-#    Replace the value of `container-name` in the workflow below with the name of the container
-#    in the `containerDefinitions` section of the task definition.
-#
-# 4. Store an IAM user access key in GitHub Actions secrets named `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
-#    See the documentation for each action used below for the recommended IAM policies for this IAM user,
-#    and best practices on handling the access key credentials.
-
 on:
   release:
     types: [published]
   workflow_dispatch:
 
-name: Deploy to Amazon ECS
+name: Deploy to Amazon S3 / CloudFront
 
 jobs:
   deploy:
@@ -39,8 +14,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Setup dotnet 6
+      uses: actions/setup-dotnet@v1
       with:
-        fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+        dotnet-version: '6.0'
+
+    - name: Build Static Site
+      run: dotnet publish -c Release -o ../site-output
+      working-directory: BasicTools.Client/
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -49,39 +31,10 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Build, tag, and push image to Amazon ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: basic-tools-site
-        IMAGE_TAG: ${{ github.sha }}
+    - name: Sync with S3
       run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./BasicTools.Server/Dockerfile .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-    - name: Fill in the new image ID in the Amazon ECS task definition
-      id: task-def
-      uses: aws-actions/amazon-ecs-render-task-definition@v1
-      with:
-        task-definition: AwsEcsTaskDef.json
-        container-name: BasicToolsSite
-        image: ${{ steps.build-image.outputs.image }}
-
-    - name: Deploy Amazon ECS task definition
-      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: BasicToolsSite-service
-        cluster: default
-        wait-for-service-stability: true
+        aws s3 sync site-output/ s3://basic-tools/ --exclude `"*.js`" --delete
+        aws s3 sync site-output/ s3://basic-tools/ --exclude `"*`" --include `"*.js`" --content-type application/javascript --delete #workaround for JS content type not set right by CLI
 
     - name: Invalidate Cloudfront Distribution
-      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION }} --paths '/*'
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.S3_CLOUDFRONT_DISTRIBUTION }} --paths '/*'
