--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x'
+        include-prerelease: true
 
     - name: Build Static Site
       run: dotnet publish -c Release -o ../site-output
