--- a/BasicTools.Client/BasicTools.Client.csproj
+++ b/BasicTools.Client/BasicTools.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Toolbelt.Blazor.HeadElement" Version="6.0.0" />
     <PackageReference Include="YamlDotNet" Version="11.2.1" />
     <PackageReference Include="MudBlazor" Version="5.1.0" />
   </ItemGroup>
